fix header margin on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -248,6 +248,7 @@ aside {
 
     h1 {
         line-height: 1.2;
+        margin: 1rem 0;
     }
 
     article {
